Correct background color in dark mode

--- a/static/global.css
+++ b/static/global.css
@@ -70,7 +70,7 @@
 	--text-secondary: var(--clr-lighter-40);
 	--text-inverted: var(--clr-darker-50);
 	--theme-primary: var(--clr-yellow-base);
-	--theme-primary-bg: var(--clr-yellow-50);
+	--theme-primary-bg: var(--clr-yellow-60);
 	--theme-primary-text: var(--clr-yellow-60);
 	--theme-accent-bg: var(--clr-red-40);
 	--theme-accent-text: var(--clr-red-60);
